# raindrop

./: .gitignore  Cargo.toml  README.md
src/: db.rs  exhaust.rs  main.rs
tests/sql/: a1.sql  a2.sql
