[package]
name = "raindrop"
version = "0.1.0"
authors = ["belltoy <belltoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
log = "0.4.11"
mysql = "20.0.1"
pretty_env_logger = "0.4.0"
structopt = "0.3.20"

[dev-dependencies]
itertools = "0.9.0"
